--- a/arch/arm64/configs/vayu_defconfig
+++ b/arch/arm64/configs/vayu_defconfig
@@ -49,7 +49,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-MOCHI"
+CONFIG_LOCALVERSION="-v28.01"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -708,9 +708,6 @@ CONFIG_CMDLINE="cgroup_disable=pressure"
 CONFIG_CMDLINE_EXTEND=y
 # CONFIG_CMDLINE_FORCE is not set
 # CONFIG_EFI is not set
-# CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE is not set
-# CONFIG_BUILD_ARM64_KERNEL_COMPRESSION_GZIP is not set
-CONFIG_BUILD_ARM64_UNCOMPRESSED_KERNEL=y
 CONFIG_KRYO_PMU_WORKAROUND=y
 CONFIG_BUILD_ARM64_DT_OVERLAY=y
 
@@ -727,7 +724,7 @@ CONFIG_BINFMT_SCRIPT=y
 CONFIG_COREDUMP=y
 CONFIG_COMPAT=y
 CONFIG_KUSER_HELPERS=y
-CONFIG_COMPAT_VDSO=y
+# CONFIG_COMPAT_VDSO=y
 CONFIG_CROSS_COMPILE_COMPAT=""
 
 #
@@ -4885,7 +4882,7 @@ CONFIG_MEM_SHARE_QMI_SERVICE=y
 CONFIG_RMNET_CTL=y
 # CONFIG_RMNET_CTL_DEBUG is not set
 # CONFIG_QCOM_HGSL_TCSR_SIGNAL is not set
-CONFIG_MSM_PERFORMANCE=y
+# CONFIG_MSM_PERFORMANCE=y
 CONFIG_QMP_DEBUGFS_CLIENT=y
 CONFIG_QCOM_QHEE_ENABLE_MEM_PROTECTION=y
 CONFIG_QCOM_SMP2P_SLEEPSTATE=y
